--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.9.0",
+    "astro-breadcrumbs": "^3.3.1",
     "partytown": "^0.0.0",
     "tailwindcss": "^4.1.8"
   }
